--- a/app_github/pubspec.yaml
+++ b/app_github/pubspec.yaml
@@ -31,7 +31,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.5  
+  dio: ^4.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
