--- a/app_github/pubspec.yaml
+++ b/app_github/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  loading_animation_widget: ^1.2.0+3  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
